[package]
name = "minhook-detours-rs"
version = "0.1.0"
authors = ["Gabriela Cristei <cristei.g772@gmail.com"]
description = "Rustic wrapper of minhook-detours-sys bindings."
edition = "2024"

readme = "README.md"
repository = "https://github.com/cristeigabriela/minhook-detours-rs"

[dependencies]
minhook-detours-sys = "0.1.1"
thiserror = "2.0.12"
winapi = { version = "0.3.9", features = ["ntdef", "minwindef"] }

[dev-dependencies]
serial_test = "3.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]