[package]
name = "minhook-detours-rs"
version = "0.2.0"
authors = ["Gabriela Cristei <cristei.g772@gmail.com"]
description = "Rustic wrapper of minhook-detours-sys bindings."
edition = "2024"

license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/cristeigabriela/minhook-detours-rs"

keywords = ["minhook", "slimdetours", "hook", "detour", "crossplatform"]
categories = ["external-ffi-bindings"]

[dependencies]
minhook-detours-sys = "0.1.2"
thiserror = "2.0.12"
winapi = { version = "0.3.9", features = ["ntdef", "minwindef"] }

[dev-dependencies]
serial_test = "3.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]